reward-card overflow-ellipsis bugfix

--- a/client/src/components/reward-card/style.module.css
+++ b/client/src/components/reward-card/style.module.css
@@ -23,19 +23,25 @@
 }
 
 .card .content .claim {
+  height: 32px;
+  max-width: 80%;
+  min-width: 0; 
+  padding: 10px;
   color: #fff;
   text-decoration: none;
-  padding: 10px;
-  width: 80%;
-  text-align: center;
   border-radius: 4px;
   font-size: 12px;
   margin-top: 20px;
   background-image: linear-gradient(270deg,#3eb4f8,#3e6ef8);
   transition: all 0.3s;
-  text-overflow: ellipsis;
+}
+
+.card .content .claim span {
+  display: block;
+  min-width: 0;
   overflow: hidden;
-  height: 50px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .card .content .claim:hover {
